<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginActivity"
            type="com.hdh.shoplogin.LoginActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_chevron_left_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textColor="#1e1e1e"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:alpha="0.5"
        android:background="#000000" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/ivLogo"
                        android:layout_width="260dp"
                        android:layout_height="200dp"
                        android:padding="20dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/login" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvMainMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_info_mainMessage"
                    android:textColor="#1e1e1e"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tvSubMessage"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/login_info_subMessage"
                    android:textColor="#bebebe"
                    android:textSize="10dp"
                    android:layout_gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/etId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="#ffffff"
                        android:drawableLeft="@drawable/ic_account_circle_gray_24dp"
                        android:drawablePadding="5dp"
                        android:hint="@string/login_idText"
                        android:inputType="text"
                        android:textColor="#1e1e1e"
                        android:textSize="11dp" />


                    <View
                        android:id="@+id/vId"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:alpha="0.3"
                        android:background="#000000" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="#ffffff"
                        android:drawableLeft="@drawable/password_icon"
                        android:drawablePadding="12dp"
                        android:hint="@string/login_passwordText"
                        android:inputType="textPassword"
                        android:paddingLeft="8dp"
                        android:textColor="#1e1e1e"
                        android:textSize="11dp" />


                    <View
                        android:id="@+id/vPassword"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:alpha="0.3"
                        android:background="#000000" />

                    <LinearLayout
                        android:id="@+id/llTerm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvTermText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_termText1"
                            android:textColor="#f46288"
                            android:textSize="13dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_termText2"
                            android:textColor="#1e1e1e"
                            android:textSize="13dp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <CheckBox
                                android:id="@+id/cbTerm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:button="@drawable/term_check" />

                        </LinearLayout>


                    </LinearLayout>

                    <Button
                        android:id="@+id/btLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#f12653"
                        android:text="@string/login_loginText"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btFindAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:text="@string/login_findAccount"
                        android:textSize="8dp" />

                    <Button
                        android:visibility="gone"
                        android:id="@+id/btAutoLoginTerm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ececec"
                        android:textColor="#989898"
                        android:text="@string/login_termText3"
                        android:textSize="8dp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>